// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FileInput component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-3 el-file-input-wrap"
  >
    <div
      class="el-flex-container el-flex-align-center"
    >
      <button
        aria-disabled="false"
        class="el-button el-mr4"
        data-is-icon-only="false"
        data-size="medium"
        data-variant="secondary"
        type="button"
      >
        Upload
      </button>
      <input
        aria-label="File upload input undefined"
        class="mocked-styled-2 el-file-input"
        data-testid="el-file-input"
        type="file"
      />
      <input
        aria-hidden="true"
        class="mocked-styled-5 el-file-input-hidden"
        id="test-static-id"
        value=""
      />
      <div
        class="el-text-base el-text-sm el-has-grey-text el-has-no-margin el-ml3"
      >
        Upload File
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FileInput component > should match a snapshot for the FilePreviewImage component 1`] = `
<DocumentFragment>
  <img
    class="mocked-styled-6 el-file-preview-image"
    src="https://mock-image.com"
  />
</DocumentFragment>
`;

exports[`FileInput component > should match a snapshot with full props 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-3 el-file-input-wrap"
  >
    <label
      class="mocked-styled-1 el-file-input-label"
    >
      Some Label
    </label>
    <div
      class="el-flex-container el-flex-align-center"
    >
      <button
        aria-disabled="false"
        class="el-button el-mr4"
        data-is-icon-only="false"
        data-size="medium"
        data-variant="secondary"
        type="button"
      >
        Change
      </button>
      <input
        aria-label="File upload input Some Text"
        class="mocked-styled-2 el-file-input"
        data-testid="el-file-input"
        type="file"
      />
      <input
        aria-hidden="true"
        class="mocked-styled-5 el-file-input-hidden"
        id="test-static-id"
        value="https://mock.com"
      />
      <div
        class="mocked-styled-4 el-file-input-icon-container"
      >
        <span
          class="el-mr4"
          role="button"
        >
          <svg
            class="el-icon"
            color="action"
            data-size="sm"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22.475 11.594c-3-5.9-10.2-8.3-16.1-5.3-2.3 1.2-4.1 3-5.3 5.3q-.15.45 0 .9c3 5.9 10.2 8.3 16.1 5.3 2.3-1.2 4.1-3 5.3-5.3.1-.3.1-.7 0-.9m-10.7 5.4c-2.8 0-5-2.2-5-5s2.2-5 5-5 5 2.2 5 5-2.2 5-5 5m0-8c1.7 0 3 1.3 3 3s-1.3 3-3 3-3-1.3-3-3 1.3-3 3-3"
            />
          </svg>
        </span>
        <span
          class="el-mr4"
          role="button"
        >
          <svg
            class="el-icon"
            color="action"
            data-size="sm"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m12.36 13.83 5.66 5.66a1 1 0 1 0 1.41-1.41l-5.66-5.66 5.66-5.66a1 1 0 1 0-1.41-1.41l-5.66 5.66L6.7 5.35a1 1 0 0 0-1.41 0 1 1 0 0 0 0 1.41l5.66 5.66-5.66 5.66a1 1 0 0 0 0 1.41 1 1 0 0 0 1.41 0z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
